# bible-guesser

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/: pyproject.toml
backend/bible_guesser/: main.py  simple_server.py  utils.py
backend/bible_guesser/scripts/: generate_bible_data.py
backend/bible_guesser/templates/: index.html  post_guess.html
bible-guesser-frontend/: package-lock.json  package.json
bible-guesser-frontend/src/: App.js  bibleData.js
bible_guesser/: bible.py  loader.py  main.py  server.py
bible_guesser/static/: styles.css
bible_guesser/templates/: index.html  post_guess.html
tests/: test_bible.py
