[tool.poetry]
name = "bible-guesser"
version = "0.1.0"
description = ""
authors = ["Matt Morgan <howcouldyouforgetthisusername@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.7"
pre-commit = "^3.3.3"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120